Add device tree overlay for Synaptics RMI4 I2C device

--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -58,6 +58,8 @@ dtb-$(RPI_DT_OVERLAYS) += smi-dev-overlay.dtb
 dtb-$(RPI_DT_OVERLAYS) += smi-nand-overlay.dtb
 dtb-$(RPI_DT_OVERLAYS) += smi-overlay.dtb
 dtb-$(RPI_DT_OVERLAYS) += spi-gpio35-39-overlay.dtb
+dtb-$(RPI_DT_OVERLAYS) += synaptics-hid-i2c-overlay.dtb
+dtb-$(RPI_DT_OVERLAYS) += synaptics-rmi4-i2c-overlay.dtb
 dtb-$(RPI_DT_OVERLAYS) += tinylcd35-overlay.dtb
 dtb-$(RPI_DT_OVERLAYS) += uart1-overlay.dtb
 dtb-$(RPI_DT_OVERLAYS) += vc4-kms-v3d-overlay.dtb
